2006-10-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/ContactsUI.js: specify a notification type as
	parameters when onConfirmContactSelection in invoked.

	* UI/WebServerResources/generic.js: specify a notification type as
	parameters when onContactRemove in invoked.

	* UI/WebServerResources/SchedulerUI.js: when the user deselects
	all calendars, select his entry.

2006-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: edit and delete events
	with their owner-relative urls. Generate a correct entry in the
	css color table when a user is added to the calendars list. Put
	the same color next to the user id.

	* UI/WebServerResources/generic.js: implemented some new helper
	methods.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -deleteEntriesWithIds:ids]): don't delete
	entries if their owner is not the current user.

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-displayClasses]): return the correct class for the current event
	representation depending on its owner.

	* UI/Scheduler/UIxCalCalendarsListView.m: added method to create
	and associate a color for each user login depending on its
	position in the list.

	* UI/Scheduler/UIxCalAptListView.m ([UIxCalAptListView
	-currentRowCSSClass]): return the correct class for the current
	row depending on the owner of the event.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector
	-setColors:colors]): new method to associate a color table with
	each user in the list.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatecomponent:_component]): associate each returned record with the owner of the table they are retrieved from.

	* SoObjects/SOGo/NSObject+Owner.[hm]: new extension module to
	NSObject to associate an instance with a user.

2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
